# CHANGELOG -- JINN
# (C) Richard "Shred" Körber
# $Id: changelog.txt 106 2006-08-08 08:06:51Z shred $


2006-08-08 shred
  * Using the new Java 5 features. Jinn now requires Java 5 to run.

2006-07-13 shred
  * Correctly started a worker thread from the AWT event thread.

2006-05-18 shred
  * Change flag introduced. The save buttons are only activated if there
    are changes that can be saved. Quitting Jinn will now open a confirmation
    dialog if there are unsaved changes.

2006-05-17 shred
  * Language changeable by menu.

2006-02-02 shred
  * BUGFIX: Major bug, escaped character sequences in properties files
    were corrupted while reading.
  * KeyRenderer now shows red and green bars additionally to the icons.

2005-11-14 shred
  * First alpha release. Jinn is functional, but not yet tested.

2005-11-02 shred
  * Birth of changelog

#