@@ -65,7 +65,7 @@ import net.shredzone.jinn.property.PropertyModel;
  * Revert to the reference text.
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: RevertAction.java 68 2006-02-02 12:51:43Z shred $
+ * @version $Id: RevertAction.java 285 2009-04-26 22:42:14Z shred $
  */
 public class RevertAction extends BaseAction {
   private static final long serialVersionUID = 7145249004953005243L;
@@ -106,6 +106,7 @@ public class RevertAction extends BaseAction {
    * 
    * @param  e      ActionEvent, may be null if directly invoked
    */
+  @Override
   public void perform( ActionEvent e ) {
     final PropertyModel mReference =
       (PropertyModel) registry.get( JinnRegistryKeys.MODEL_REFERENCE );
