@@ -69,7 +69,7 @@ import net.shredzone.jinn.property.PropertyModel;
  * Save a properties file
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: SaveAction.java 85 2006-05-18 07:00:11Z shred $
+ * @version $Id: SaveAction.java 285 2009-04-26 22:42:14Z shred $
  */
 public class SaveAction extends AsyncBaseAction {
   private static final long serialVersionUID = -1701159023065148732L;
@@ -114,6 +114,7 @@ public class SaveAction extends AsyncBaseAction {
    * 
    * @param  e      ActionEvent, may be null if directly invoked
    */
+  @Override
   public void perform( ActionEvent e ) {
     doSave( getFrame(e) );
   }
