@@ -71,7 +71,7 @@ import net.shredzone.jinn.property.PropertyModel;
  * Save a properties file to another file.
  *
  * @author  Richard Körber &lt;dev@shredzone.de&gt;
- * @version $Id: SaveAsAction.java 85 2006-05-18 07:00:11Z shred $
+ * @version $Id: SaveAsAction.java 285 2009-04-26 22:42:14Z shred $
  */
 public class SaveAsAction extends AsyncBaseAction {
   private static final long serialVersionUID = -5321317574685533552L;
@@ -116,6 +116,7 @@ public class SaveAsAction extends AsyncBaseAction {
    * 
    * @param  e      ActionEvent, may be null if directly invoked
    */
+  @Override
   public void perform( ActionEvent e ) {
     JFileChooser fc = new JFileChooser();
     fc.setCurrentDirectory( (File) registry.get( JinnRegistryKeys.FILE_LASTDIR ) );
